--- a/.github/workflows/update_s3_htmls.yml
+++ b/.github/workflows/update_s3_htmls.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   update-html:
-    runs-on: ubuntu-18.04
+    runs-on: IOS-18.04
     if: ${{ github.repository_owner == 'pytorch' }}
     strategy:
       matrix:
