--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,13 @@
+version: 2.1
 
+# Define the jobs we want to run for this project
+jobs:
+  test:
+    steps:
+      - run: echo "this is the test job"
+
+# Orchestrate our job run sequence
+workflows:
+  build_and_test:
+    jobs:
+      - test
