--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,14 @@ version: 2.1
 
 # Define the jobs we want to run for this project
 jobs:
-  test:
+  build:
+    docker:
+      - image: alpine:latest
     steps:
-      - run: echo "this is the test job"
+      - run: echo "this is the build job"
 
 # Orchestrate our job run sequence
 workflows:
   build_and_test:
     jobs:
-      - test
+      - build
