Update on ".github: Add render_test_results job"
This render should put us with some feature parity to the CircleCI web UI renders for j(x)unit test reports, should make it so you don't have to look through a long list of logs to see what tests failed for which job

Render should look somewhat similar to 
![image](https://user-images.githubusercontent.com/1700823/116908744-1bb4b980-abf8-11eb-904c-e93ea4d2f805.png)


Signed-off-by: Eli Uriegas <eliuriegas@fb.com>

[ghstack-poisoned]

--- a/.github/templates/linux_ci_workflow.yml.in
+++ b/.github/templates/linux_ci_workflow.yml.in
@@ -191,6 +191,7 @@ jobs:
           # Prune all of the docker images
           docker system prune -af
   render_test_results:
+    if: always()
     needs:
       - test
     runs-on: ubuntu-18.04
