Update on ".github: Add render_test_results job"
This render should put us with some feature parity to the CircleCI web UI renders for j(x)unit test reports, should make it so you don't have to look through a long list of logs to see what tests failed for which job

Render should look somewhat similar to 
![image](https://user-images.githubusercontent.com/1700823/116908744-1bb4b980-abf8-11eb-904c-e93ea4d2f805.png)


Signed-off-by: Eli Uriegas <eliuriegas@fb.com>

Differential Revision: [D28154513](https://our.internmc.facebook.com/intern/diff/D28154513)

[ghstack-poisoned]

--- a/.github/workflows/pytorch-linux-xenial-cuda10.2-cudnn7-py3-gcc7.yml
+++ b/.github/workflows/pytorch-linux-xenial-cuda10.2-cudnn7-py3-gcc7.yml
@@ -205,6 +205,7 @@ jobs:
         name: Download PyTorch Test Reports
         with:
           name: test-reports
+          path: test-reports/
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
@@ -213,4 +214,4 @@ jobs:
           pip install junitparser rich
       - name: Output Test Results (Click Me)
         run: |
-          python tools/render_junit.py .
+          python tools/render_junit.py test-reports
