--- a/.github/templates/linux_ci_workflow.yml.in
+++ b/.github/templates/linux_ci_workflow.yml.in
@@ -204,6 +204,7 @@ jobs:
         name: Download PyTorch Test Reports
         with:
           name: test-reports
+          path: test-reports/
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
@@ -212,4 +213,4 @@ jobs:
           pip install junitparser rich
       - name: Output Test Results (Click Me)
         run: |
-          python tools/render_junit.py .
+          python tools/render_junit.py test-reports
