--- a/.github/workflows/macos_build.yml
+++ b/.github/workflows/macos_build.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   BUILD_ENVIRONMENT: pytorch-macos-10.15-py3-arm64-build
+  SCCACHE_BUCKET: ossci-compiler-cache-circleci-v2
 
 jobs:
   calculate-docker-image:
@@ -14,12 +15,12 @@ jobs:
     # macos-10.15 === macos-latest according to docs, better to pin it though
     runs-on: macos-10.15
     steps:
-      - name: Say stuff
-        run: |
-          # sysctl -a | grep cpu
-          ls /Applications
-          ls /Users
-          xcode-select -p
+      # - name: Say stuff
+      #   run: |
+      #     # sysctl -a | grep cpu
+      #     ls /Applications
+      #     ls /Users
+      #     xcode-select -p
       - name: Clone pytorch/pytorch
         uses: actions/checkout@v2
         with:
@@ -30,18 +31,20 @@ jobs:
           set -e
           sudo curl --retry 3 https://s3.amazonaws.com/ossci-macos/sccache_v2.15 --output /usr/local/bin/sccache
           sudo chmod +x /usr/local/bin/sccache
-          export SCCACHE_BUCKET=ossci-compiler-cache-circleci-v2
-
-          # This IAM user allows write access to S3 bucket for sccache
-          set +x
-          export AWS_ACCESS_KEY_ID=${AWS_S3_UPDATE_ACCESS_KEY_ID}
-          export AWS_SECRET_ACCESS_KEY=${AWS_S3_UPDATE_SECRET_ACCESS_KEY}
-          set -x
       - name: Run build
         working-directory: pytorch/
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.SCCACHE_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SCCACHE_AWS_SECRET_ACCESS_KEY }}
         run: |
           sudo xcode-select -r
           which sccache
+          printenv | sort
+          # reload aws creds
+          sccache --stop-server || echo server already stopped
+          sccache --start-server
+          sccache -s
+
           export IN_CI=1
           sudo xcode-select -s /Applications/Xcode_12.0.1.app
           chmod a+x .jenkins/pytorch/macos-build.sh
