--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,6 +25,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install requirements
         run: pip install -r requirements.txt
+      - name: Epic fail
+        run: 'false'
       - name: Ensure consistent CircleCI YAML config
         run: cd .circleci && ./ensure-consistency.py
       - name: Ensure consistent GHA workflows in cancel_redundant_workflows.yml
