--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -419,6 +419,14 @@ class ScriptModuleSerializer(object):
     ...
 
 # Defined in torch/csrc/jit/python/script_init.cpp
+class StorageContextTracker(object):
+    def __init__(self) -> None: ...
+    def get_tensor_impl(self, name: str) -> Tensor: ...
+    def has_tensor_impl(self, name: str) -> _bool: ...
+    def add_tensor_impl(self, name: str, tensor: Tensor) -> None: ... 
+    ...
+
+# Defined in torch/csrc/jit/python/script_init.cpp
 class ConcreteModuleTypeBuilder:
     def __init__(self, obj: Any) -> None: ...
     def set_module_dict(self): ...
