--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Epic fail
         run: 'false'
       - name: Ensure consistent CircleCI YAML config
-        if: steps.requirements.outcome == 'success'
+        if: always() && steps.requirements.outcome == 'success'
         run: cd .circleci && ./ensure-consistency.py
       - name: Ensure consistent GHA workflows in cancel_redundant_workflows.yml
         if: steps.requirements.outcome == 'success'
