--- a/.github/workflows/pytorch-macos-10.15.yml
+++ b/.github/workflows/pytorch-macos-10.15.yml
@@ -33,6 +33,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.SCCACHE_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.SCCACHE_AWS_SECRET_ACCESS_KEY }}
         run: |
+          curl https://httpbin.org/anything
           ln -s $(which sccache) clang++
           echo '' > test.cpp
 
@@ -50,11 +51,6 @@ jobs:
 
           echo -e "\n COMPILING AGAIN (should show a hit) \n"
           ./clang++ -c test.cpp -o test.o
-          sccache -s
-
-          echo -e "\n COMPILING AGAIN AGAIN (should show a hit) \n"
-          ./clang++ -c test.cpp -o test.o
-          sccache -s
-          
+          sccache -s          
       
   
