--- a/.github/workflows/pytorch-macos-10.15.yml
+++ b/.github/workflows/pytorch-macos-10.15.yml
@@ -14,6 +14,10 @@ jobs:
   build:
     runs-on: macos-10.15
     steps:
+      - name: my thing
+        uses: driazati/test-action@master
+        with:
+          who-to-greet: 'myself'
       - name: env test build
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.SCCACHE_AWS_ACCESS_KEY_ID }}
