--- a/mypy-strict.ini
+++ b/mypy-strict.ini
@@ -46,6 +46,7 @@ files =
     tools/print_test_stats.py,
     tools/pyi,
     tools/stats_utils,
+    tools/render_junit.py,
     tools/test_history.py,
     tools/test/test_extract_scripts.py,
     tools/test/test_mypy_wrapper.py,
