Add missing deps to run mypy on render_junit

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -374,6 +374,8 @@ jobs:
           set -eux
           pip install -r requirements.txt
           pip install mypy==0.812
+          # Needed to check tools/render_junit.py
+          pip install junitparser rich
       - name: Run autogen
         run: |
           set -eux
