--- a/.github/workflows/pytorch-linux-xenial-py3.6-gcc5.4.yml
+++ b/.github/workflows/pytorch-linux-xenial-py3.6-gcc5.4.yml
@@ -209,8 +209,12 @@ jobs:
         with:
           python-version: 3.9
       - name: Install dependencies
+        # boto3 version copied from .circleci/docker/common/install_conda.sh
         run: |
-          pip install junitparser rich
+          pip install -r requirements.txt
+          pip install boto3==1.16.34 junitparser rich
       - name: Output Test Results (Click Me)
         run: |
           python tools/render_junit.py .
+      - name: Display and upload test statistics (Click Me)
+        run: python tools/print_test_stats.py --upload-to-s3 --compare-with-s3 test
