Update base for Update on "[torch.Package/TorchScript] TS into torch.Package test cases"
Test cases to test torch.Package's handling of TorchScript objects.

TODO: test mapping storages to different device

Differential Revision: [D27832544](https://our.internmc.facebook.com/intern/diff/D27832544)

[ghstack-poisoned]

--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -358,6 +358,7 @@ def import_ir_module_from_buffer(
 def _import_ir_module_from_package(
     cu: CompilationUnit,
     reader: PyTorchFileReader,
+    storage_tracker: StorageContextTracker,
     map_location: Union[_device, str, None],
     ts_id: str
 ) -> ScriptModule: ...
