Share VS Code settings/extensions nicely

--- a/.gitignore
+++ b/.gitignore
@@ -257,7 +257,7 @@ cmake-build-debug
 # Below files are not deleted by "setup.py clean".
 
 # Visual Studio Code files
-.vscode
+/.vscode/settings.json
 .vs
 
 # YouCompleteMe config file
