--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -358,7 +358,7 @@ def import_ir_module_from_buffer(
 def _import_ir_module_from_package(
     cu: CompilationUnit,
     reader: PyTorchFileReader,
-    storage_tracker: StorageContextTracker,
+    storage_tracker: StorageContext,
     map_location: Union[_device, str, None],
     ts_id: str
 ) -> ScriptModule: ...
@@ -421,11 +421,11 @@ class ScriptModuleSerializer(object):
     ...
 
 # Defined in torch/csrc/jit/python/script_init.cpp
-class StorageContextTracker(object):
+class StorageContext(object):
     def __init__(self) -> None: ...
-    def get_tensor_impl(self, name: str) -> Tensor: ...
-    def has_tensor_impl(self, name: str) -> _bool: ...
-    def add_tensor_impl(self, name: str, tensor: Tensor) -> None: ...
+    def get_storage(self, name: str, size: _int, dtype: _dtype) -> Tensor: ...
+    def has_storage(self, name: str) -> _bool: ...
+    def add_storage(self, name: str, tensor: Tensor) -> None: ...
     ...
 
 # Defined in torch/csrc/jit/python/script_init.cpp
