--- a/.github/templates/linux_ci_workflow.yml.in
+++ b/.github/templates/linux_ci_workflow.yml.in
@@ -200,6 +200,9 @@ jobs:
     steps:
       - name: Checkout PyTorch
         uses: actions/checkout@v2
+        with:
+          # deep clone, to allow tools/print_test_stats.py to use Git commands
+          fetch-depth: 0
       - uses: actions/download-artifact@v2
         name: Download PyTorch Test Reports
         with:
@@ -216,7 +219,21 @@ jobs:
       - name: Output Test Results (Click Me)
         run: |
           python tools/render_junit.py test
+      - name: Parse ref
+        id: parse-ref
+        run: |
+          echo ::set-output name=branch::"${GITHUB_REF#refs/heads/}"
+          echo ::set-output name=tag::"${GITHUB_REF#refs/tags/}"
       - name: Display and upload test statistics (Click Me)
+        # temporary hack: set CIRCLE_* vars, until we update
+        # tools/print_test_stats.py to natively support GitHub Actions
+        env:
+          CIRCLE_BRANCH: ${{ steps.parse-ref.outputs.branch }}
+          CIRCLE_JOB: !{{ build_environment }}
+          CIRCLE_PR_NUMBER: ${{ github.event.pull_request.number }}
+          CIRCLE_SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
+          CIRCLE_TAG: ${{ steps.parse-ref.outputs.tag }}
+          CIRCLE_WORKFLOW_ID: ${{ steps.run_id }} # dunno if this corresponds
         run: |
           export PYTHONPATH=$PWD
           python tools/print_test_stats.py --upload-to-s3 --compare-with-s3 test
