--- a/benchmarks/distributed/rpc/parameter_server/configurations/benchmark_configurations.json
+++ b/benchmarks/distributed/rpc/parameter_server/configurations/benchmark_configurations.json
@@ -1,7 +1,7 @@
 {
     "3": {
         "trainer_count": 2,
-        "parameter_server_count": 0,
+        "ps_count": 0,
         "rpc_async_timeout": 15,
         "batch_size": 5
     }
