--- a/.github/workflows/test_tools.yml
+++ b/.github/workflows/test_tools.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           set -eux
           pip install -r requirements.txt
+          pip install -r requirements-flake8.txt
           pip install boto3==1.16.34 mypy==0.812
       - name: Run tests
         run: python -m unittest discover -vs tools/test -p 'test_*.py'
