Implement convolution, convolution_backward
- shape inference wasn't trivial, due to a subtle bug in calling at::
  shape helpers without first expanding arrays such as output_padding

--- a/lazy_tensor_core/ts_native_functions.yaml
+++ b/lazy_tensor_core/ts_native_functions.yaml
@@ -14,6 +14,8 @@ full_codegen:
   - baddbmm
   - bitwise_and.Tensor
   - bmm
+  - convolution
+  - convolution_backward
   - cos
   - clamp
   - div.Tensor
