--- a/aten/src/THC/CMakeLists.txt
+++ b/aten/src/THC/CMakeLists.txt
@@ -5,4 +5,5 @@ PARENT_SCOPE)
 install(FILES
           THCAtomics.cuh
           THCDeviceUtils.cuh
+          THCGenerateByteType.h
           DESTINATION "${ATEN_INSTALL_INCLUDE_SUBDIR}/THC")
