Update base for Update on "detect mocked module on saving pass"
Raises a not implemented error if we attempt to pickle an object which uses a mocked module. Now we no longer have to load the object to get this check, and instead happens right on the saving path.

Differential Revision: [D33146274](https://our.internmc.facebook.com/intern/diff/D33146274)

[ghstack-poisoned]

--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -264,11 +264,8 @@ def _jit_assert_is_instance(obj: Any, type: JitType): ...
 def _jit_clear_class_registry() -> None: ...
 def _jit_set_emit_hooks(ModuleHook: Optional[Callable], FunctionHook: Optional[Callable]) -> None: ...
 def _jit_get_emit_hooks() -> Tuple[Callable, Callable]: ...
-def _load_for_lite_interpreter(filename: Union[str, Path], map_location: Union[_device, str, None], is_flatbuffer: _bool): ...
-def _load_for_lite_interpreter_from_buffer(buffer: BinaryIO, map_location: Union[_device, str, None], is_flatbuffer: _bool): ...
-def _save_mobile_module(module: LiteScriptModule, filename: str): ...
-def _jit_module_to_mobile(module: ScriptModule): ...
-def _module_equals(lhs: LiteScriptModule, rhs: LiteScriptModule): ...
+def _load_for_lite_interpreter(filename: Union[str, Path], map_location: Union[_device, str, None]): ...
+def _load_for_lite_interpreter_from_buffer(buffer: BinaryIO, map_location: Union[_device, str, None]): ...
 def _export_operator_list(module: LiteScriptModule): ...
 def _get_model_bytecode_version(filename: Union[str, Path]) -> _int: ...
 def _get_model_bytecode_version_from_buffer(buffer: BinaryIO) -> _int: ...
@@ -296,6 +293,11 @@ def _create_function_from_trace(
 def _jit_is_script_object(obj: Any) -> _bool: ...
 def _last_executed_optimized_graph() -> Graph: ...
 def parse_type_comment(comment: str) -> Decl: ...
+def _populate_upgraders_map(content: Dict[str, str]) -> None: ...
+def _get_upgraders_map_size() -> _int: ...
+def _dump_upgraders_map() -> Dict[str, str]: ...
+def _test_only_populate_upgraders(content: Dict[str, str]) -> None: ...
+def _test_only_remove_upgraders(content: Dict[str, str]) -> None: ...
 def merge_type_from_type_comment(decl: Decl, type_annotation_decl: Decl, is_method: _bool) -> Decl: ...
 def parse_ir(input: str) -> Graph: ...
 def parse_schema(schema: str) -> FunctionSchema: ...
